# climber

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/climber/: __init__.py  cli.py  config.py
src/climber/ingest/: __init__.py  base.py  file.py  web.py
src/climber/output/: __init__.py  audio_script.py  base.py  briefing.py  flashcards.py
src/climber/process/: __init__.py  chunker.py  processor.py
src/climber/process/prompts/: __init__.py  audio_script.py  briefing.py  flashcards.py
src/climber/process/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: conftest.py  test_cli.py  test_config.py
tests/test_ingest/: __init__.py  test_file.py  test_web.py
tests/test_output/: __init__.py  test_formatters.py
tests/test_process/: __init__.py  test_chunker.py  test_processor.py
